# hibp2sqlite

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README.txt  hibp2sqlite.pro  hibp2sqlite.rc  main.cpp
.github/workflows/: cmake-ubuntu-latest.yml  cmake-windows-latest.yml
example/: pwned_indexed.sqlite  pwnedpasswords_ntlm.txt
linux/: create-appimage-qt6_10_1.sh  create-appimage-qt6_9_3.sh  create-appimage.sh
linux/AppDir/usr/share/applications/: hibp2sqlite.desktop
